docs/1.7.0b14/_sources/class/cfdm.Bounds.rst.txt
.. currentmodule:: cfdm
.. default-role:: obj

cfdm.Bounds
===========

----

.. autoclass:: cfdm.Bounds
   :no-members:
   :no-inherited-members:

Inspection
----------

.. rubric:: Methods
	    
.. autosummary::
   :nosignatures:
   :toctree: ../method/
   :template: method.rst

   ~cfdm.Bounds.dump
   ~cfdm.Bounds.name
   
Properties
----------

.. rubric:: Methods
	    
.. autosummary::
   :nosignatures:
   :toctree: ../method/
   :template: method.rst

   ~cfdm.Bounds.del_property
   ~cfdm.Bounds.get_property
   ~cfdm.Bounds.has_property
   ~cfdm.Bounds.set_property
   ~cfdm.Bounds.properties
   ~cfdm.Bounds.inherited_properties

Data
----

.. rubric:: Methods
	    
.. autosummary::
   :nosignatures:
   :toctree: ../method/
   :template: method.rst

   ~cfdm.Bounds.get_array
   ~cfdm.Bounds.del_data
   ~cfdm.Bounds.get_data
   ~cfdm.Bounds.has_data
   ~cfdm.Bounds.set_data
   ~cfdm.Bounds.insert_dimension
   ~cfdm.Bounds.squeeze
   ~cfdm.Bounds.transpose

.. rubric:: Attributes
   
.. autosummary::
   :nosignatures:
   :toctree: ../attribute/
   :template: attribute.rst

   ~cfdm.Bounds.data

Miscellaneous
-------------

.. rubric:: Methods
	    
.. autosummary::
   :nosignatures:
   :toctree: ../method/
   :template: method.rst

   ~cfdm.Bounds.copy
   ~cfdm.Bounds.equals

NetCDF
------

.. rubric:: Methods
	    
.. autosummary::
   :nosignatures:
   :toctree: ../method/
   :template: method.rst

   ~cfdm.Bounds.nc_del_variable
   ~cfdm.Bounds.nc_get_variable
   ~cfdm.Bounds.nc_has_variable
   ~cfdm.Bounds.nc_set_variable 

Special
-------

.. rubric:: Methods

.. autosummary::
   :nosignatures:
   :toctree: ../method/
   :template: method.rst

   ~cfdm.Bounds.__deepcopy__
   ~cfdm.Bounds.__getitem__
   ~cfdm.Bounds.__repr__
   ~cfdm.Bounds.__str__

   
